<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.7</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.nativ.jsonapi</groupId>
	<artifactId>crnk-api-service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>demo</name>
	<description>Demo project for Spring Boot</description>
	
	<properties>
		<java.version>17</java.version>		
		<crnk-version>3.4.20210509072026</crnk-version>
		<spring-aot>0.12.2</spring-aot>
		<json-jackson>2.11.0</json-jackson>
		<start-class>com.nativ.jsonapi.CrnkApiServiceApplication</start-class>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.apache.tomcat.embed</groupId>
					<artifactId>tomcat-embed-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.tomcat.embed</groupId>
					<artifactId>tomcat-embed-websocket</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-tomcat -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat.experimental</groupId>
			<artifactId>tomcat-embed-programmatic</artifactId>
			<version>9.0.38</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>io.crnk</groupId>
			<artifactId>crnk-setup-spring-boot2</artifactId>
		</dependency>
		<dependency>
			<groupId>io.crnk</groupId>
			<artifactId>crnk-core</artifactId>
		</dependency>
		<dependency>
			<groupId>io.crnk</groupId>
			<artifactId>crnk-setup-spring</artifactId>
		</dependency>
		<dependency>
			<groupId>io.crnk</groupId>
			<artifactId>crnk-home</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${json-jackson}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${json-jackson}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${json-jackson}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework.experimental/spring-aot -->
		<dependency>
			<groupId>org.springframework.experimental</groupId>
			<artifactId>spring-aot</artifactId>
			<version>${spring-aot}</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework.experimental/spring-aot -->
		<dependency>
			<groupId>org.springframework.experimental</groupId>
			<artifactId>spring-native</artifactId>
			<version>${spring-aot}</version>
		</dependency>
	</dependencies>
		
	<dependencyManagement>
		<dependencies>
			<!-- https://mvnrepository.com/artifact/io.crnk/crnk-bom -->
			<dependency>
				<groupId>io.crnk</groupId>
				<artifactId>crnk-bom</artifactId>
				<version>${crnk-version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.experimental</groupId>
				<artifactId>spring-aot-maven-plugin</artifactId>
				<version>${spring-aot}</version>
				<configuration>
					<mainClass>com.nativ.jsonapi.CrnkApiServiceApplication</mainClass>
					<removeSpelSupport>true</removeSpelSupport>
					<mode>native</mode>
					<debugVerify>false</debugVerify>
					<verify>true</verify>
				</configuration>
				<executions>
					<execution>
						<id>generate</id>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
					<execution>
						<id>test-generate</id>
						<goals>
							<goal>test-generate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</pluginRepository>
	</pluginRepositories>
	
	<profiles>
		<profile>
			<id>classic</id>
			<build>
				<plugins>					
					<!-- Avoid a clash between Spring Boot repackaging and native-maven-plugin -->
					<plugin>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-maven-plugin</artifactId>
						<configuration>
							<classifier>exec</classifier>
							<layers>
								<enabled>true</enabled>
							</layers>
							<excludes>
								<exclude>
									<groupId>org.projectlombok</groupId>
									<artifactId>lombok</artifactId>
								</exclude>
							</excludes>
							<image>
								<builder>paketobuildpacks/builder:tiny</builder>
								<env>
									<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
								</env>
							</image>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>native</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<version>0.9.13</version>
						<extensions>true</extensions>
						<executions>
							<execution>
								<id>build-native</id>
								<goals>
									<goal>build</goal>
								</goals>
								<phase>package</phase>
							</execution>
						</executions>
						<configuration>
							<mainClass>com.nativ.jsonapi.CrnkApiServiceApplication</mainClass>
							<verbose>true</verbose>
							<quickBuild>true</quickBuild>
							<!-- <buildArg>-g</buildArg>
							<buildArg>-O0</buildArg> -->
							<buildArg>--pgo --gc=G1 --allow-incomplete-classpath --report-unsupported-elements-at-runtime --no-fallback --install-exit-handlers \
--initialize-at-build-time=com.fasterxml.jackson.databind.ext.Java7Handlers,com.fasterxml.jackson.databind.ext.Java7HandlersImpl,com.fasterxml.jackson.databind.ext.Java7Support,com.fasterxml.jackson.databind.ext.Java7SupportImpl,com.fasterxml.jackson.databind.util.ClassUtil,org.aopalliance.aop.Advice,org.apache.catalina.Globals,org.apache.catalina.servlets.DefaultServlet,org.apache.commons.logging.LogAdapter,org.apache.commons.logging.LogAdapter$1,org.apache.commons.logging.LogAdapter$Log4jLog,org.apache.commons.logging.LogAdapter$Slf4jLocationAwareLog,org.apache.commons.logging.LogFactory,org.hibernate.validator.internal.util.Contracts,org.hibernate.validator.internal.util.ReflectionHelper,org.hibernate.validator.internal.util.TypeHelper,org.hibernate.validator.internal.util.logging.Log_$logger,org.hibernate.validator.internal.util.privilegedactions.LoadClass,org.slf4j.Logger,org.slf4j.LoggerFactory,org.slf4j.MDC,org.slf4j.event.EventRecodingLogger,org.slf4j.event.SubstituteLoggingEvent,org.slf4j.helpers.FormattingTuple,org.slf4j.helpers.MessageFormatter,org.slf4j.helpers.NOPLogger,org.slf4j.helpers.NOPLoggerFactory,org.slf4j.helpers.SubstituteLogger,org.slf4j.helpers.SubstituteLoggerFactory,org.slf4j.helpers.Util,org.slf4j.impl.StaticLoggerBinder,org.slf4j.spi.LocationAwareLogger,org.springframework.aop.Advisor,org.springframework.aop.Advisor$1,org.springframework.aop.TargetSource,org.springframework.aop.framework.Advised,org.springframework.aot.StaticSpringFactories,org.springframework.beans.CachedIntrospectionResults,org.springframework.beans.PropertyEditorRegistrySupport,org.springframework.beans.factory.xml.XmlBeanDefinitionReader,org.springframework.boot.BeanDefinitionLoader,org.springframework.boot.logging.LoggingSystem,org.springframework.boot.logging.java.JavaLoggingSystem$Factory,org.springframework.boot.logging.log4j2.Log4J2LoggingSystem$Factory,org.springframework.boot.logging.logback.LogbackLoggingSystem,org.springframework.boot.logging.logback.LogbackLoggingSystem$Factory,org.springframework.context.annotation.CommonAnnotationBeanPostProcessor,org.springframework.context.event.EventListenerMethodProcessor,org.springframework.context.support.AbstractApplicationContext,org.springframework.core.DecoratingProxy,org.springframework.core.DefaultParameterNameDiscoverer,org.springframework.core.KotlinDetector,org.springframework.core.NativeDetector,org.springframework.core.ReactiveAdapterRegistry,org.springframework.core.ResolvableType,org.springframework.core.SpringProperties,org.springframework.core.annotation.AnnotationFilter,org.springframework.core.annotation.AnnotationFilter$1,org.springframework.core.annotation.AnnotationFilter$2,org.springframework.core.annotation.AnnotationUtils,org.springframework.core.annotation.PackagesAnnotationFilter,org.springframework.core.annotation.TypeMappedAnnotations,org.springframework.core.io.support.PropertiesLoaderUtils,org.springframework.core.io.support.ResourcePropertiesPersister,org.springframework.core.io.support.SpringFactoriesLoader,org.springframework.format.annotation.DateTimeFormat$ISO,org.springframework.http.HttpStatus,org.springframework.http.MediaType,org.springframework.http.codec.CodecConfigurerFactory,org.springframework.http.codec.support.BaseDefaultCodecs,org.springframework.http.converter.json.AbstractJackson2HttpMessageConverter,org.springframework.http.converter.support.AllEncompassingFormHttpMessageConverter,org.springframework.integration.support.json.Jackson2JsonObjectMapper,org.springframework.jdbc.datasource.ConnectionProxy,org.springframework.jdbc.support.JdbcAccessor,org.springframework.jdbc.support.JdbcTransactionManager,org.springframework.messaging.simp.config.AbstractMessageBrokerConfiguration,org.springframework.nativex.AotModeDetector,org.springframework.nativex.substitutions.boot.NativeSpringBootVersion,org.springframework.transaction.annotation.Isolation,org.springframework.transaction.annotation.Propagation,org.springframework.util.Assert,org.springframework.util.ClassUtils,org.springframework.util.CollectionUtils,org.springframework.util.ConcurrentReferenceHashMap,org.springframework.util.DefaultPropertiesPersister,org.springframework.util.LinkedCaseInsensitiveMap,org.springframework.util.MimeType,org.springframework.util.ReflectionUtils,org.springframework.util.StringUtils,org.springframework.util.unit.DataSize,org.springframework.util.unit.DataUnit,org.springframework.web.client.RestTemplate,org.springframework.web.reactive.function.client.DefaultWebClientBuilder,org.springframework.web.servlet.config.annotation.WebMvcConfigurationSupport,org.springframework.web.servlet.function.support.RouterFunctionMapping,org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExceptionResolver,org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerAdapter,ch.qos.logback.classic,ch.qos.logback.classic.util,ch.qos.logback.core,org.apache.logging.log4j,org.apache.logging.slf4j,org.hibernate.validator.internal.engine.valueextraction,org.jboss.logging,org.springframework.core.env \
--enable-http -J--add-exports=java.management/sun.management=ALL-UNNAMED --enable-https -H:Class=com.nativ.jsonapi.CrnkApiServiceApplication</buildArg>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>	
	</profiles>
</project>
<!-- https://johnnysswlab.com/tune-your-programs-speed-with-profile-guided-optimizations/ -->